--- a/storefront/package.json
+++ b/storefront/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.35.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
